--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "chart.js": "^3.0.0",
     "ionicons": "^7.3.1",
     "register-service-worker": "^1.7.2",
